content/products/searchlight/8.0.0-rc.0/reference/hyperalert/hyperalert_check_webhook.md
---
title: Check Webhook
menu:
  product_searchlight_8.0.0-rc.0:
    identifier: hyperalert-check-webhook
    name: Check Webhook
    parent: hyperalert-cli
product_name: searchlight
section_menu_id: reference
menu_name: product_searchlight_8.0.0-rc.0
info:
  version: 8.0.0-rc.0
---

## hyperalert check_webhook

Check webhook result

### Synopsis

Check webhook result

```
hyperalert check_webhook [flags]
```

### Options

```
      --check_command string   SearchlightPlugin name for this webhook check
  -h, --help                   help for check_webhook
      --key.0 string           
      --key.1 string           
      --key.10 string          
      --key.11 string          
      --key.12 string          
      --key.13 string          
      --key.14 string          
      --key.15 string          
      --key.16 string          
      --key.17 string          
      --key.18 string          
      --key.19 string          
      --key.2 string           
      --key.3 string           
      --key.4 string           
      --key.5 string           
      --key.6 string           
      --key.7 string           
      --key.8 string           
      --key.9 string           
      --val.0 string           
      --val.1 string           
      --val.10 string          
      --val.11 string          
      --val.12 string          
      --val.13 string          
      --val.14 string          
      --val.15 string          
      --val.16 string          
      --val.17 string          
      --val.18 string          
      --val.19 string          
      --val.2 string           
      --val.3 string           
      --val.4 string           
      --val.5 string           
      --val.6 string           
      --val.7 string           
      --val.8 string           
      --val.9 string           
      --webhook_url string     Call the webhook server using this URL
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --bypass-validating-webhook-xray   if true, bypasses validating webhook xray checks
      --context string                   Use the context in kubeconfig
      --icinga.checkInterval int         Icinga check_interval in second. [Format: 30, 300] (default 30)
      --kubeconfig string                Path to kubeconfig file with authorization information (the master location is set by the master flag).
      --log-flush-frequency duration     Maximum number of seconds between log flushes (default 5s)
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr
      --use-kubeapiserver-fqdn-for-aks   if true, uses kube-apiserver FQDN for AKS cluster to workaround https://github.com/Azure/AKS/issues/522 (default true)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO

* [hyperalert](/products/searchlight/8.0.0-rc.0/reference/hyperalert/hyperalert)	 - AppsCode Icinga2 plugin


